--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ###CLI RUN:
 
 ./gradlew clean runTestNG
-./gradlew clean runTestNG;./gradlew allureReport;./gradlew allureServe
+./gradlew clean runTestNG allureReport allureServe
 
 
 ###CONFIG:
